Fix rewriteDryRun failure by replacing submittedTasks.get(0) with getFirst()